# vxllm

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bts.jsonc  models.json  package.json  tsconfig.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/app/: .env.example  components.json  index.html  package.json  tsconfig.json
apps/app/src/: index.css  routeTree.gen.ts
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts
apps/docs/: package.json  tsconfig.json
apps/fumadocs/: package.json
apps/server/: .env.example  package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/voice/: pyproject.toml
apps/voice/app/: config.py  main.py
apps/web/: components.json  package.json  tsconfig.json
apps/www/: .gitignore  next.config.ts  package.json  tsconfig.json
apps/www/public/: install.sh
docker/: .env.example  Dockerfile.server  Dockerfile.voice  docker-compose.yml
docs/: VxLLM_Plan_of_Action.md
docs/project/: changelog.md  decisions.md  design-guidelines.md  glossary.md  tech-stack.md
docs/project/_templates/: api-template.md  feature-template.md  schema-template.md  workflow-template.md
docs/project/api/: api-chat.md  api-dashboard.md  api-inference.md  (+4 more)
sidecar/voice/: pyproject.toml
sidecar/voice/app/: config.py  main.py
sidecar/voice/app/engines/: stt.py  tts.py  vad.py
sidecar/voice/app/routes/: health.py  speak.py  stream.py
(+172 files in other folders)
