[project]
name = "vxllm-voice"
version = "0.1.0"
description = "VxLLM Voice Sidecar — STT, TTS, and VAD"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "faster-whisper>=1.1",
    "kokoro>=0.9",
    "soundfile>=0.12",
    "numpy>=1.26",
    "torch>=2.3",
    "torchaudio>=2.3",
    "silero-vad>=5.1",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
vxllm-voice = "app.main:start"
